--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -97,3 +97,11 @@ tr.details .details-control {
         margin-right: 0px;
     }
 }
+
+.product-image .btn-icon-only.btn-circle {
+    position: absolute;
+}
+
+.product-image.preview-upload-image.text-center {
+    display: -webkit-inline-box;
+}
