--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -105,3 +105,7 @@ tr.details .details-control {
 .product-image.preview-upload-image.text-center {
     display: -webkit-inline-box;
 }
+
+.form-group.form-md-line-input .form-inline .form-control.input-sm {
+    width: 24%;
+}
