--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -133,3 +133,11 @@ tr.text-discount th {
 .select2{
     width: 100% !important;
 }
+
+button.btn_add_comp{
+    margin-left: 10%;
+}
+
+.comparation_title {
+    margin: 5% 10%;
+}
