Add Form Register Customer

--- a/assets/css/login-custom.css
+++ b/assets/css/login-custom.css
@@ -144,7 +144,18 @@ Login page
   margin: 0 auto;
   padding: 10px;
   color: #999;
-  font-size: 13px; }
+  font-size: 13px; 
+}
+
+.block-register{
+  border-bottom: none !important;
+}
+
+span.error {
+  color: #b94a48;
+  display: inline-block;
+  margin-left: 36%;
+}
 
 @media (max-width: 480px) {
   /***
@@ -157,4 +168,5 @@ Login page
   .login .content h3 {
     font-size: 22px; }
   .login .checkbox {
-    font-size: 13px; } }
+    font-size: 13px; } 
+}
