--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -138,7 +138,7 @@ button.btn_add_comp, button.btn_add_comp_edit{
     margin-left: 10%;
 }
 
-.comparation_title {
+.comparison_title {
     margin: 5% 10%;
 }
 
@@ -187,9 +187,10 @@ li.product-item {
 .sales-talk-product .product-name h3 {
     text-align: center;
     font-weight: 400;
-    margin: 30px 30px 10px 50px;
+    margin: 30px 30px 10px 30px;
     padding-bottom: 30px;
     border-bottom: 2px solid darkgrey;
+    text-transform: uppercase;
 }
 
 .sales-talk-product-detail {
@@ -204,5 +205,29 @@ li.product-item {
 .sales-talk-product .logo-kanaka img {
     margin-left: 73%;
     margin-bottom: 30px;
+}
+
+.catalog-item.comparison {
+    background-color: transparent;
+}
+
+.product-comparison {
+    border: 1px solid lightgrey;
+    padding: 30px 0px;
+}
+
+.comparison-title h3 {
+    text-align: center;
+    font-weight: 400;
+    margin: 0px 30px 30px 30px;
+    padding-bottom: 30px;
+    border-bottom: 2px solid darkgrey;
+    text-transform: uppercase;
+}
+
+.comparison-title .logo-kanaka {
+    position: absolute;
+    top: 95px;
+    left: 45px;
 }
 /* END CATALOG */
