--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -151,6 +151,7 @@ table#total-value-add {
 ol.product-items {
     list-style: none none;
     display: block;
+    padding-left: 0;
 }
 
 .catalog-item {
@@ -203,7 +204,7 @@ li.product-item {
 }
 
 .sales-talk-product .logo-kanaka img {
-    margin-left: 73%;
+    margin-left: 68%;
     margin-bottom: 30px;
 }
 
@@ -235,7 +236,65 @@ li.product-item {
     margin: 0;
 }
 
-.product-comparison .catalog-item {
-    min-height: 420px;
+@media (min-width: 768px){
+    .catalog-item .product-image {
+        height: 260px;
+    }
+
+    .product-comparison .catalog-item {
+        min-height: 420px;
+    }
+}
+
+@media (max-width: 767px){
+    .catalog-item {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .catalog-item .product-image img{
+        width: 100%;
+        height: auto;
+    }
+
+    .action-button-catalog {
+        margin-top: 0;
+    }
+
+    .action-button-catalog a.btn.btn-sm.btn-primary {
+        width: 47%;
+    }
+
+    .sales-talk-detail .product-image img{
+        width: 100%;
+        height: auto;
+    }
+
+    .sales-talk-detail {
+        display: block;
+    }
+
+    .sales-talk-product-detail {
+        margin-left: 0;
+    }
+
+    .sales-talk-product .logo-kanaka img {
+        width: 150px;
+        margin: 10px;
+    }
+
+    .comparison-title .logo-kanaka {
+        position: unset;
+    }
+
+    .comparison-title .logo-kanaka img {
+        width: 150px;
+        margin: 0 20% 10%;
+    }
+
+    .product-comparison ol.product-items {
+        margin: 15px;
+    }
+
 }
 /* END CATALOG */
