--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -236,6 +236,27 @@ li.product-item {
     margin: 0;
 }
 
+.product-pricelist {
+    border: 1px solid lightgrey;
+}
+
+.pricelist-title h3 {
+    text-align: left;
+    border-bottom: 2px solid darkgray;
+}
+
+.pricelist-title {
+    padding: 0px 20px;
+}
+
+.product-pricelist .logo-kanaka img {
+    padding: 20px;
+}
+
+.table-product-pricelist {
+    padding: 0 20px;
+}
+
 @media (min-width: 768px){
     .catalog-item .product-image {
         height: 260px;
